--- a/css/template.css
+++ b/css/template.css
@@ -503,9 +503,16 @@ footer i {
 
     .textf {
         float: right;
-        width: 80%;
+        width: 70%;
         text-align: left;
-        margin-top: 25px;
+        margin-top: 20px;
+    }
+
+    .imgf {
+        width: 20%;
+        margin: 20px;
+        margin-left: 0;
+        float: left;
     }
 
 }
