--- a/css/template.css
+++ b/css/template.css
@@ -501,20 +501,9 @@ footer i {
 
 @media only screen and (max-width: 767px) {
 
-    .textf {
-        float: right;
-        width: 70%;
-        text-align: left;
-        margin-top: 20px;
+    .articlefooter {
+        display: none;
     }
-
-    .imgf {
-        width: 20%;
-        margin: 20px;
-        margin-left: 0;
-        float: left;
-    }
-
 }
 
 @media only screen and (max-width: 1086px) {
