--- a/css/template.css
+++ b/css/template.css
@@ -494,7 +494,9 @@ footer i {
         background-color: rgba(255, 255, 255, 0.47);
     }
 
-
+    .leftside p {
+        font-size: small;
+    }
 
 
 }
