--- a/css/template.css
+++ b/css/template.css
@@ -506,6 +506,11 @@ footer i {
     .articlefooter {
         display: none;
     }
+
+    .leftside p {
+        font-size: small;
+    }
+
 }
 
 @media only screen and (max-width: 1086px) {
