--- a/css/template.css
+++ b/css/template.css
@@ -8,6 +8,10 @@ body {
     background-color: #f1f1f1;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* start navbar */
 nav {
     background-color: black;
@@ -18,6 +22,7 @@ nav a {
     padding: 10px 16px;
     display: inline-block;
     background-color: black;
+    transition: 0.4s;
 
 }
 
@@ -92,6 +97,8 @@ header {
     text-align: center;
     font-family: 'Oswald', sans-serif;
     background-color: rgba(255, 255, 255, 0.47);
+    transition: 0.4s;
+
 }
 
 .butimg:hover {
@@ -155,9 +162,28 @@ article {
 
 /* start buttons */
 
-.buttonsdiv {
-    padding-top: 20px;
-    padding-bottom: 100px;
+#buttonsdiv {
+    height: 115px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+#buttonsdiv2 {
+    height: 115px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+#buttonsdiv3 {
+    height: 115px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 .likeb {
@@ -165,7 +191,7 @@ article {
     background-color: white;
     border: 1px solid lightgray;
     font-size: large;
-    float: left;
+    transition: 0.4s;
 
 }
 
@@ -173,16 +199,49 @@ article {
     background-color: lightgray;
 }
 
-.repb {
+#repb {
     padding: 10px 20px;
     background-color: black;
     color: white;
     border: none;
     font-size: medium;
-    float: right;
+    transition: 0.4s;
+
 }
 
-.repb:hover {
+#repb:hover {
+    background-color: lightgray;
+    border: none;
+    color: black;
+}
+
+#repb2 {
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: medium;
+    transition: 0.4s;
+
+}
+
+#repb2:hover {
+    background-color: lightgray;
+    border: none;
+    color: black;
+}
+
+#repb3 {
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: medium;
+    transition: 0.4s;
+
+}
+
+#repb3:hover {
     background-color: lightgray;
     border: none;
     color: black;
@@ -195,24 +254,36 @@ article {
 }
 
 /* end buttons */
-.articlefooter {
-    border-top: lightgray solid 1px;
-
+#articlefooter {
+    display: none;
+    align-items: center;
 
 }
 
+#articlefooter2 {
+    align-items: center;
+    display: flex;
+
+}
+
+#articlefootertwo {
+    display: none;
+}
+
+#articlefooterthree {
+    display: none;
+}
+
+
 .imgf {
-    width: 13%;
+    width: 90px;
     margin: 20px;
     margin-left: 0;
-    float: left;
 }
 
 .textf {
-    float: right;
-    width: 84%;
     text-align: left;
-    margin-top: 35px;
+    align-items: center;
 }
 
 .textf h4 {
@@ -226,14 +297,6 @@ article {
 .arc2 {
     margin-top: 40px;
 }
-
-
-
-
-
-
-
-
 
 /* start rightside */
 
@@ -272,11 +335,16 @@ section {
 
 .secbody {
     background-color: white;
+    display: flex;
+    flex-flow: column;
 }
 
 .list {
     background-color: white;
     border-top: lightgray solid 1px;
+    display: flex;
+    align-items: center;
+    transition: 0.4s;
 }
 
 .list:hover {
@@ -284,27 +352,26 @@ section {
 }
 
 .imglist {
-    width: 15%;
+    width: 65px;
     margin: 10px;
-    float: left;
-}
-
-.textlist {
-    float: right;
-    width: 79%;
-    padding-top: 15px;
 }
 
 .secbody2 {
     background-color: white;
     padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
 }
 
 .pgright {
 
-    padding: 100px;
-    text-align: center;
+    padding: 77px;
     background-color: #f1f1f1;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 
 }
 
@@ -360,6 +427,7 @@ section {
 .secbody4 i {
     font-size: 25px;
     padding: 1px;
+    transition: 0.4s;
 }
 
 .secbody4 i:hover {
@@ -387,6 +455,8 @@ input {
     color: white;
     border: none;
     font-size: 15px;
+    transition: 0.4s;
+
 }
 
 .subbotton:hover {
@@ -426,29 +496,127 @@ footer i {
     padding: 10px;
     width: 150px;
     text-align: center;
+    transition: 0.4s;
 }
 
 .footerbutton:hover {
     background-color: #f1f1f1;
 }
 
+.footerbutton a {
+    transition: 0.4s;
+}
+
 .footerbutton:hover a {
     color: black;
 }
 
+/* ------------------- */
 
+#Subscribefront {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+}
 
-/* end fotter */
-@media only screen and (max-width: 393px) {
+#Subscribefront .subform {
+    background-color: white;
+    padding: 43px;
+    width: 70%;
+    margin: auto;
+    margin-top: 170px;
+}
 
-    .textlist {
-        float: right;
-        width: 75%;
-        padding-top: 15px;
-    }
+.headsub {
+    display: flex;
+    justify-content: space-between;
 
 }
 
+.headsub .x {
+    padding: 6px 18px;
+    background-color: transparent;
+    border: none;
+    font-size: 30px;
+}
+
+.headsub .x:hover {
+    background-color: lightgrey;
+
+}
+
+.subbotton2 {
+    width: 100%;
+    height: 40px;
+    margin: 10px 0;
+    background-color: #f44336;
+    color: white;
+    border: none;
+    font-size: 15px;
+}
+
+.subbotton2:hover {
+    background-color: lightgrey;
+    color: black;
+}
+
+
+#repbone {
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: medium;
+    transition: 0.4s;
+    display: none;
+
+}
+
+#repbone:hover {
+    background-color: lightgray;
+    border: none;
+    color: black;
+}
+
+#repbtwo {
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: medium;
+    transition: 0.4s;
+    display: none;
+
+}
+
+#repbtwo:hover {
+    background-color: lightgray;
+    border: none;
+    color: black;
+}
+
+#repbthree {
+    padding: 10px 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    font-size: medium;
+    transition: 0.4s;
+    display: none;
+
+}
+
+#repbthree:hover {
+    background-color: lightgray;
+    border: none;
+    color: black;
+}
+
+/* end fotter */
 @media only screen and (max-width: 368px) {
 
     .h1 {
@@ -473,8 +641,6 @@ footer i {
     .himg {
         position: absolute;
         top: 10%;
-
-
     }
 
     .bimg {
@@ -494,23 +660,25 @@ footer i {
         background-color: rgba(255, 255, 255, 0.47);
     }
 
+    .shead {
+        font-size: small;
+    }
 
 
 }
 
 @media only screen and (max-width: 767px) {
 
-    .articlefooter {
+    /* .articlefooter {
         display: none;
-    }
-
+    } */
     .leftside p {
         font-size: small;
     }
 
 }
 
-@media only screen and (max-width: 1086px) {
+@media only screen and (max-width: 950px) {
     .rightside {
 
         width: 100%;
